# ObjectDetectSamples

./: README.md
BagOfWords/Cpp/Base/: Makefile  bagofwords_classification.cpp
BagOfWords/Cpp/Lite/: CMakeLists.txt  bagofwords_classification.cpp
BagOfWords/Cpp/Minimal/: CMakeLists.txt  main.cpp
BagOfWords/Python/Base/: imutils.py  test_bow.py  train_bow.py
BagOfWords/Python/Detection/: bag_of_words_evaluate.py  bag_of_words_evaluate_all.py  bag_of_words_evaluation.md  bag_of_words_test.py  bag_of_words_train.py
BagOfWords/Python/OpenCV/: test_bow.py  train_bow.py
CascadeClassifier/: README.md  categorical_image_generator.py  detect.py  image_list_generator.py
CascadeClassifier/HAAR/: cascade.xml  results.txt
CascadeClassifier/LBP/: cascade.xml  results.txt
CategoricalRCNN/: BinaryClassification.ipynb  CategoricalClassification.ipynb  predict_airplanes_binary.py  predict_airplanes_categorical.py
CustomModel/: Model_Maker_Object_Detection_for_Airplane_Figurine.ipynb  create_annotations.py
HistogramOfGradients/Basic/Python/: hog_evaluate.py  hog_test.py
HistogramOfGradients/Descriptor/Python/: hog_descriptor_evaluate.py
HistogramOfGradients/Detection/Cpp/: CMakeLists.txt  main.cpp
RegressionCNN/: RegressionCNNRandom.ipynb  RegressionCNNSegmentation.ipynb  random_iou_data.csv  regression_data_random_generator.py  regression_data_segmentation_generator.py
